@@ -1,3 +1,7 @@
+2002-08-28  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-runtime.c (__mf_violation): Try harder to locate nearby objects.
+
 2002-08-27  Frank Ch. Eigler  <fche@redhat.com>
 
 	libmudflap hook breakup:
